@@ -1,5 +1,9 @@
 2007-01-31  Jens Granseuer  <jensgr@gmx.net>
 
+	* factory.c: (main): don't leak the GnomeProgram reference
+
+2007-01-31  Jens Granseuer  <jensgr@gmx.net>
+
 	* gnome-settings-multimedia-keys.c: (acme_filter_events): make sure
 	we have a key event before treating it as such (fixes bug #382503)
 
